27.dec (lv)
      - feature request #8355: bww import: updated mscore regression testfiles
24.dec (lv)
      - feature request #8355: bww import: mscore regression test
      - feature request #8355: bww import: bww2mxml regression test
       (la)
      - fix #7764: crashes when open ove file (vanferry patch)
      - fix #8372: Fix to end-start-repeat bar line width (miwarre patch)
23.dec (lv)
      - feature request #8355: bww import: initial implementation
       (la)
      - fix #8369: Delete one instrument removes slurs from others
22.dec (lv)
      - feature request #8355: bww import: framework and bww to xml converter
       (la)
      - fix #8358: new score: create one measure more when pickup measure selected
      - fix #8347: tie in note entry does not work for voice > 1 after a barline (patch by fnbecker)
      - fix #8356: Configurable first page number (patch by Miwarre)
      - fix #8308: Creating triplet in grace note leads to time corruption
17.dec (la)
      - fix #6536: Position of stemslash in grace note chord
15.dec (la)
      - fix #7415: Stems too short for 32nd and 64th notes
      - fix #8273: Unecessary courtesy clef remains when clef is changed
13.dec (ws)
      - fix #8194 Edit instruments
8.dec (la)
      - fix #8184: Creating parts with cross staff barlines crash
4.dec (la)
      - fix #8161: Missing lyrics in MIDI import
24.nov (la)
      - fix #8018: Lilypond: Quote marks in lyrics need to be escaped
      - fix #7892: Exchange voices adds extra rests
      - fix #7944: Instrument limit
19.nov (la)
      - fix #7017: Chord names does not support "H" name as chord
14.nov (la)
      - fix #7249: Notehead should be on top of the staff lines
13.nov (la)
      - fix #7311: Dragging tied notes and removing tie gives weird result
11.nov (la)
      - fix #7882: Transposing a score shouldn't transpose a drum staff (from trunk)
      - fix #6320: Add œ in F2 text palette
9.nov  (la)